--- a/DevRender/MainWindow.axaml
+++ b/DevRender/MainWindow.axaml
@@ -5,5 +5,5 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="DevRender.MainWindow"
         Title="DevRender">
-    Welcome to Avalonia!
+    <Grid Name="grid" />
 </Window>
